--- a/site/package.json
+++ b/site/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "css-loader": "^5.2.6",
+    "html2canvas": "^1.4.1",
     "materialize-css": "^1.0.0-rc.2",
     "normalize.css": "^8.0.1",
     "style-loader": "^2.0.0"
