--- a/site/package.json
+++ b/site/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^9.0.0",
+    "css-loader": "^6.7.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "http-server": "^0.12.3",
@@ -27,10 +28,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "css-loader": "^5.2.6",
-    "html2canvas": "^1.4.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "normalize.css": "^8.0.1",
-    "style-loader": "^2.0.0"
+    "html2canvas": "^1.4.1"
   }
 }
